; ModuleID = '/home/carl/AnghaBench/vlc/modules/keystore/extr_file_crypt_win32.c_Process.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/keystore/extr_file_crypt_win32.c_Process.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, i32* }

@CRYPTPROTECT_UI_FORBIDDEN = common dso_local global i32 0, align 4
@FALSE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i64, i32**, i64 (%struct.TYPE_6__*, i32*, i32*, i32*, i32*, i32, %struct.TYPE_6__*)*)* @Process to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @Process(i32* %0, i64 %1, i32** %2, i64 (%struct.TYPE_6__*, i32*, i32*, i32*, i32*, i32, %struct.TYPE_6__*)* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32**, align 8
  %9 = alloca i64 (%struct.TYPE_6__*, i32*, i32*, i32*, i32*, i32, %struct.TYPE_6__*)*, align 8
  %10 = alloca %struct.TYPE_6__, align 8
  %11 = alloca %struct.TYPE_6__, align 8
  store i32* %0, i32** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32** %2, i32*** %8, align 8
  store i64 (%struct.TYPE_6__*, i32*, i32*, i32*, i32*, i32, %struct.TYPE_6__*)* %3, i64 (%struct.TYPE_6__*, i32*, i32*, i32*, i32*, i32, %struct.TYPE_6__*)** %9, align 8
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 0
  %13 = load i64, i64* %7, align 8
  store i64 %13, i64* %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 1
  %15 = load i32*, i32** %6, align 8
  store i32* %15, i32** %14, align 8
  %16 = load i64 (%struct.TYPE_6__*, i32*, i32*, i32*, i32*, i32, %struct.TYPE_6__*)*, i64 (%struct.TYPE_6__*, i32*, i32*, i32*, i32*, i32, %struct.TYPE_6__*)** %9, align 8
  %17 = load i32, i32* @CRYPTPROTECT_UI_FORBIDDEN, align 4
  %18 = call i64 %16(%struct.TYPE_6__* %10, i32* null, i32* null, i32* null, i32* null, i32 %17, %struct.TYPE_6__* %11)
  %19 = load i64, i64* @FALSE, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %4
  store i64 0, i64* %5, align 8
  br label %50

22:                                               ; preds = %4
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = call i32* @malloc(i64 %24)
  %26 = load i32**, i32*** %8, align 8
  store i32* %25, i32** %26, align 8
  %27 = load i32**, i32*** %8, align 8
  %28 = load i32*, i32** %27, align 8
  %29 = icmp eq i32* %28, null
  %30 = zext i1 %29 to i32
  %31 = call i64 @unlikely(i32 %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %37

33:                                               ; preds = %22
  %34 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 1
  %35 = load i32*, i32** %34, align 8
  %36 = call i32 @LocalFree(i32* %35)
  store i64 0, i64* %5, align 8
  br label %50

37:                                               ; preds = %22
  %38 = load i32**, i32*** %8, align 8
  %39 = load i32*, i32** %38, align 8
  %40 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 1
  %41 = load i32*, i32** %40, align 8
  %42 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %43 = load i64, i64* %42, align 8
  %44 = call i32 @memcpy(i32* %39, i32* %41, i64 %43)
  %45 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 1
  %46 = load i32*, i32** %45, align 8
  %47 = call i32 @LocalFree(i32* %46)
  %48 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %49 = load i64, i64* %48, align 8
  store i64 %49, i64* %5, align 8
  br label %50

50:                                               ; preds = %37, %33, %21
  %51 = load i64, i64* %5, align 8
  ret i64 %51
}

declare dso_local i32* @malloc(i64) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @LocalFree(i32*) #1

declare dso_local i32 @memcpy(i32*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
